# margin

./: .gitignore  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
e2e/: create-post.spec.ts  empty-state.spec.ts  error-state.spec.ts  folder-picker.spec.ts  helpers.ts  post-list.spec.ts  settings-persistence.spec.ts  smoke.spec.ts  vue.spec.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: assets.rs  error.rs  mod.rs  posts.rs  print.rs  settings.rs  templates.rs  versions.rs
src/__tests__/: App.spec.ts  create-from-template.spec.ts  create-resolve.spec.ts  debounced-autosave.spec.ts  editor-print.spec.ts  frontmatter.spec.ts  global-shortcuts.spec.ts  home-filtering.spec.ts  imageSource.spec.ts  linkedin-export.spec.ts  linkedin.spec.ts  markdown-roundtrip.spec.ts  posts-dir.spec.ts  posts-store.spec.ts  print-export.spec.ts  print-stylesheet.spec.ts  search.spec.ts  settings-store.spec.ts  settings-view.spec.ts  shortcuts-modal.spec.ts  skeletons.spec.ts  stats.spec.ts  tauri-bridge-assets.spec.ts  tauri-bridge-templates.spec.ts  tauri-bridge-versions.spec.ts  template-picker.spec.ts  templates-view.spec.ts  templates.spec.ts  theme.spec.ts  toaster.spec.ts  toasts-store.spec.ts  ui-store-shortcuts.spec.ts  ui-store.spec.ts  version-drawer.spec.ts  (+1 more)
(+61 files in other folders)
